--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,23 @@
   --white-text: #ffffff;
   --footer-background-color: #2f303a;
   --footer-contacts-list: rgba(255, 255, 255, 0.6);
+  --border-line: #ececec;
+  --border-box-portfolio: #eeeeee;
+}
+
+html {
+  box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 body {
+  margin: 0;
+  padding: 0;
   font-family: 'Roboto';
   background-color: #fff;
   color: var(--primary-text-color);
@@ -23,29 +31,37 @@ body {
 ul {
   list-style: none;
 }
-
 a {
   text-decoration: none;
 }
 
-/* Разметка шапки */
+/* Шапка сайта */
+
+.header {
+  border-bottom: 1px solid var(--border-line);
+}
+
+.header-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
 }
 
-.container-contacts {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+.navigation {
+  display: flex;
+  align-items: center;
 }
+
 /* Логотип */
 .logo {
+  margin-right: 93px;
   font-family: 'Raleway', sans-serif;
   letter-spacing: 0.03em;
   font-size: 26px;
@@ -58,9 +74,14 @@ a {
 
 /* Навигация*/
 .site-nav {
+  display: flex;
+  padding: 0;
+  margin: 0;
 }
 
 .site-nav .nav-link {
+  display: block;
+  padding: 32px 0;
   font-weight: 500;
   letter-spacing: 0.02em;
   font-size: 14px;
@@ -73,8 +94,13 @@ a {
   color: var(--accent-color);
 }
 
+.site-list:not(:last-child) {
+  margin-right: 50px;
+}
+
 /* Контакты */
 .contacts-list {
+  display: flex;
   font-weight: 500;
   letter-spacing: 0.02em;
   font-size: 14px;
@@ -89,15 +115,23 @@ a {
 .tel-link:hover {
   color: var(--accent-color);
 }
+
 /* Герой */
 .hero {
+  text-align: center;
   background-color: var(--footer-background-color);
 }
+
+.hero .container {
+  padding: 200px 280px;
+}
+
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 30px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.4;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--white-text);
@@ -108,16 +142,19 @@ a {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.8;
-  display: flex;
-  align-items: center;
-  text-align: center;
   letter-spacing: 0.06em;
+  padding: 10px 32px;
+  border-radius: 4px;
+  border-style: none;
+  text-align: center;
   color: var(--white-text);
   background-color: var(--accent-color);
 }
 
 /* Секции */
 .section-title {
+  margin: 0;
+  padding: 0;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.2;
@@ -126,10 +163,27 @@ a {
   color: var(--title-text-color);
 }
 
-/* Особенности */
-.features-list {
+.section {
+  padding: 94px 0;
 }
+/* Особенности */
+
+.visually-hidden {
+  visibility: hidden;
+}
+
+.features-list {
+  display: flex;
+  margin-top: 51px;
+}
+
+.features-item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .features-title {
+  margin-top: 0;
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.1;
@@ -139,6 +193,8 @@ a {
 }
 
 .features-inf {
+  margin: 0;
+  padding: 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
@@ -146,16 +202,52 @@ a {
 }
 
 /* Чем мы занимаемся */
+
+.offers-title,
+.our-team-title {
+  margin-bottom: 50px;
+}
+
 .section-examples {
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.offer-list:not(:last-child) {
+  margin-right: 30px;
 }
 
 /* Наша команда */
 .team-section {
   background-color: var(--second-background-color);
 }
+
 .team-list {
+  display: flex;
+  width: 270px;
+  margin: 0;
+  padding: 0;
 }
+
+.our-team-list {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  padding-bottom: 30px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--white-text);
+}
+
+.our-team-list:not(:last-child) {
+  margin-right: 30px;
+}
+
 .team-title {
+  margin-top: 30px;
+  margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.9;
@@ -164,6 +256,9 @@ a {
   color: var(--title-text-color);
 }
 .team-positions {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-weight: normal;
   font-size: 16px;
   line-height: 1.9;
   text-align: center;
@@ -172,9 +267,13 @@ a {
 
 /* Футер */
 .footer {
+  padding: 60px 0;
   background-color: var(--footer-background-color);
 }
 .dark-section {
+  display: inline-block;
+  margin-bottom: 20px;
+
   font-family: 'Raleway';
   text-decoration: none;
   letter-spacing: 0.03em;
@@ -191,7 +290,14 @@ a {
   font-style: normal;
 }
 .address-list {
+  margin: 0;
+  padding: 0;
 }
+
+.address-item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
 .address-map {
   font-weight: 400;
   letter-spacing: 0.03em;
@@ -217,13 +323,27 @@ a {
 /* Портфолио */
 
 /* Фильтр */
-.container-portfolio-but {
+
+.portfolio-main-title {
+  margin: 0;
+  visibility: hidden;
 }
 
 .portfolio-button-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
 }
 
 .portfolio-button {
+  margin-right: 8px;
+  border-radius: 4px;
+  border-style: none;
+  line-height: 38px;
+  padding: 6px 22px;
+
   cursor: pointer;
   font-weight: 500;
   font-size: 16px;
@@ -238,16 +358,35 @@ a {
 .portfolio-button:focus {
   color: var(--white-text);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Проекты */
 .portfolio-examples {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+}
+
+.portfolio-items {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  background: var(--white-text);
+  border: 1px solid var(--border-box-portfolio);
+}
+
+.portfolio-items:nth-child(3n) {
+  margin-right: 0;
 }
 
 .portfolio-link {
 }
 
 .portfolio-title {
+  margin: 20px 24px 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
@@ -256,6 +395,7 @@ a {
 }
 
 .portfolio-text {
+  margin: 0 24px 20px;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.8;
