--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,12 @@ a {
   text-decoration: none;
 }
 
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 /* Шапка сайта */
 
 .header {
